--- a/libraries/CustomDialog/src/main/res/values/styles.xml
+++ b/libraries/CustomDialog/src/main/res/values/styles.xml
@@ -1,10 +1,5 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-    </style>
-
     <style name="CustomDialog" parent="android:Theme.Dialog">
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowContentOverlay">@null</item>
@@ -16,9 +11,20 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsFloating">true</item>
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
+
+    <style name="app_setting_dialog" parent="android:Theme.Dialog">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
         <item name="android:backgroundDimEnabled">false</item>
     </style>
 
+
+    <!-- dialog animation show -->
     <style name="DialogAnimationSlideUp">
         <item name="android:windowEnterAnimation">@anim/slide_up</item>
         <item name="android:windowExitAnimation">@anim/out_up</item>
@@ -29,5 +35,36 @@
         <item name="android:windowExitAnimation">@anim/out_down</item>
     </style>
 
+
+    <!-- New dialog style -->
+    <style name="dialog_title_with_bg">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">@dimen/font_large</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@color/app_primary_color</item>
+        <item name="android:padding">@dimen/large_space</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="dialog_title">
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">@dimen/font_large</item>
+        <item name="android:padding">@dimen/large_space</item>
+        <item name="android:textColor">@color/text_color_bright</item>
+        <item name="android:background">@drawable/dialog_title_bg</item>
+    </style>
+
+    <style name="dialog_button_negative">
+        <item name="android:textColor">@color/text_color_dark</item>
+        <item name="android:background">@drawable/dialog_button_negative</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="dialog_button_positive" >
+        <item name="android:textColor">@color/text_color_dark</item>
+        <item name="android:background">@drawable/dialog_button_positive</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 
 </resources>
